crates/core/tests/ui/sql/fail/missing_binding.rs
use babar::sql;

fn main() {
    let _ = sql!("SELECT $id, $name", id = babar::codec::int4);
}
